--- a/index.html
+++ b/index.html
@@ -164,13 +164,18 @@
 			<ul>
 				<li data-index="rs-1587" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
 					data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300"
-					data-thumb="img/newImages/_1icecreamSlider.jpg" data-rotate="0" data-saveperformance="off"
+					data-thumb="img/newImages/_1icecreamSlider.png" data-rotate="0" data-saveperformance="off"
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
-					<img src="img/newImages/_1icecreamSlider.jpg" alt=""
-						style="object-fit: contain; object-position: center;" data-bgrepeat="no-repeat"
-						data-bgparallax="5" class="rev-slidebg" data-no-retina>
+					<div position: relative; display: inline-block;>
+						<img src="img/newImages/truck1.png" alt=""
+							style="width: 100%; height: 100%; background-size: cover; background-position: bottom;"
+							data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+						<div
+							style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7);">
+						</div>
+					</div>
 
 					<!-- LAYER NR. 1 -->
 					<div class="slider_text_box">
@@ -181,7 +186,7 @@
 							data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
 							data-textAlign="['left','left','left','left']"
-							style="color: #F195B2; text-shadow: 2px 2px 4px #00000080">Lavish Ice-Cream ... </div>
+							style="color: #fff; text-shadow: 2px 2px 4px #00000080">Lavish Ice-Cream ... </div>
 
 						<div class="tp-caption tp-resizeme secand_text" data-x="['left','left','left','15','15']"
 							data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']"
@@ -190,7 +195,7 @@
 							data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on"
 							data-transform_idle="o:1;"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-							style="color: #5d5d5d; text-shadow: 2px 2px 4px #00000080">
+							style="color: #fff; text-shadow: 2px 2px 4px #00000080">
 							A realm of coffee enchantment, where every cup is a journey through the rich and aromatic
 							world of flavors. Come, immerse yourself in the magic of our coffee creations!
 						</div>
@@ -201,7 +206,7 @@
 							data-lineheight="['46','46','46','46']" data-width="none" data-height="none"
 							data-whitespace="nowrap" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							<a style="margin-top: 40px;" class="main_btn" href="cake.html">Book Now</a>
+							<a style="margin-top: 40px;" class="main_btn" href="cake.html">BOOK AN EVENT</a>
 						</div>
 					</div>
 				</li>
@@ -212,8 +217,15 @@
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
-					<img src="img/newImages/_3bubbleTeaSlider.jpg" alt="" data-bgposition="center" data-bgfit="cover"
-						data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+
+					<div position: relative; display: inline-block;>
+						<img src="img/newImages/truck2.jpg"
+							style="width: 100%; height: 100%; background-size: cover; background-position: bottom;"
+							alt="" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+						<div
+							style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7);">
+						</div>
+					</div>
 					<!-- LAYERS -->
 					<!-- LAYERS -->
 
@@ -225,7 +237,7 @@
 							data-lineheight="['80','80','80','50','40']" data-width="['800','800','800','500']"
 							data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-							data-textAlign="['left','left','left','left']">Lavish Bubble Tea ...</div>
+							data-textAlign="['left','left','left','left']">Lavish Ice cream ...</div>
 
 						<div class="tp-caption tp-resizeme secand_text" data-x="['left','left','left','15','15']"
 							data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']"
@@ -234,8 +246,8 @@
 							data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on"
 							data-transform_idle="o:1;"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							Sip into the Bubble Tea Adventure - a fusion of flavors and surprises in every delightful
-							gulp."
+							Chill with the Wheels of Delight - Book Your Neighborhood Visit Today and Let the Ice Cream
+							Adventure Roll to Your Doorstep!
 						</div>
 
 						<div class="tp-caption tp-resizeme slider_button" data-x="['left','left','left','15','15']"
@@ -244,7 +256,7 @@
 							data-lineheight="['46','46','46','46']" data-width="none" data-height="none"
 							data-whitespace="nowrap" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							<a class="main_btn" href="#">Book Now</a>
+							<a class="main_btn" href="#">BOOK YOU NEIGHBOURHOOD VISIT</a>
 						</div>
 					</div>
 				</li>
@@ -255,8 +267,17 @@
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
-					<img src="img/newImages/_2coffeSlider.jpg" alt="" data-bgposition="right center" data-bgfit="cover"
-						data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+
+					<div position: relative; display: inline-block;>
+
+						<img src="img/newImages/eventslider1.jpeg"
+							style="width: 100%; height: 100%; background-size: cover; background-position: bottom;"
+							alt="" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+						<div
+							style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7);">
+						</div>
+
+					</div>
 					<!-- LAYERS -->
 					<!-- LAYERS -->
 
@@ -277,8 +298,8 @@
 							data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on"
 							data-transform_idle="o:1;"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							In our Ice Cream Shop, enjoy a world of flavors and savor the joy in every scoop, where
-							every bite is a delightful escape to happiness.
+							Crafting Sweet Memories, One Scoop at a Time - Book Your Event Catering Today and Savor the
+							Flavorful Delight
 						</div>
 
 						<div class="tp-caption tp-resizeme slider_button" data-x="['left','left','left','15','15']"
@@ -287,7 +308,7 @@
 							data-lineheight="['46','46','46','46']" data-width="none" data-height="none"
 							data-whitespace="nowrap" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							<a class="main_btn" href="#">Book Now</a>
+							<a class="main_btn" href="#">BOOK US FOR CATERING</a>
 						</div>
 					</div>
 				</li>
