--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			<ul>
 				<li data-index="rs-1587" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
 					data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300"
-					data-thumb="img/newImages/_1icecreamSlider.png" data-rotate="0" data-saveperformance="off"
+					data-thumb="img/newImages/truck1.png" data-rotate="0" data-saveperformance="off"
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
@@ -213,7 +213,7 @@
 
 				<li data-index="rs-1589" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
 					data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300"
-					data-thumb="img/newImages/slider3.jpg" data-rotate="0" data-saveperformance="off"
+					data-thumb="img/newImages/truck2.jpg" data-rotate="0" data-saveperformance="off"
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
@@ -263,7 +263,7 @@
 
 				<li data-index="rs-1588" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
 					data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300"
-					data-thumb="img/newImages/slider3.jpg" data-rotate="0" data-saveperformance="off"
+					data-thumb="img/newImages/eventslider1.jpeg" data-rotate="0" data-saveperformance="off"
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
@@ -289,7 +289,7 @@
 							data-lineheight="['80','80','80','50','40']" data-width="['800','800','800','500']"
 							data-height="none" data-whitespace="normal" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:0px;s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
-							data-textAlign="['left','left','left','left']">Lavish Coffee...</div>
+							data-textAlign="['left','left','left','left']">Lavish Ice cream...</div>
 
 						<div class="tp-caption tp-resizeme secand_text" data-x="['left','left','left','15','15']"
 							data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']"
@@ -482,25 +482,28 @@
 							<div class="discover_item">
 								<h4>Sea Salt Caramel Coffee</h4>
 								<p>Satisfy your sweet and salty cravings with our Sea Salt Caramel Coffee milk smoothie
-									with boba pearls. A perfect pick-me-up for any time of the day. <span>$0.00</span>
+									with boba pearls. A perfect pick-me-up for any time of the day.
 								</p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 							<div class="discover_item">
 								<h4>Brown Sugar Bubble Tea</h4>
 								<p>Our brown sugar bubble tea is a deliciously sweet and creamy beverage that combines
-									bold tea with smooth milk brown sugar. <span>$0.00</span></p>
+									bold tea with smooth milk brown sugar. </p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 							<div class="discover_item">
 								<h4>Oreo Milkshakes</h4>
 								<p>Crushed Oreos, creamy vanilla ice cream, and a touch of magic come together to create
-									the ultimate Oreo milkshake experience. <span>$0.00</span></p>
+									the ultimate Oreo milkshake experience. </p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 							<div class="discover_item">
 								<h4>Tropical Snow Balls</h4>
 								<p>Our tropical shave ice blends exotic flavors and juicy fruits for a refreshing treat.
-									Cool off in style! <span>$0.00</span></p>
+									Cool off in style! </p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
-
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -508,23 +511,25 @@
 							<div class="discover_item">
 								<h4>Cheese Cake Ice cream</h4>
 								<p>Enjoy the taste of summer with our delicious Cheese Cake Ice cream cone.
-									<span>$0.00</span>
 								</p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 							<div class="discover_item">
 								<h4>Taro Bubble Tea</h4>
 								<p>Taro boba tea, a sweet, earthy, and revitalizing Taiwanese favourite, is made with
-									milk, chewy pearls, and creamy taro root powder. <span>$0.00</span></p>
+									milk, chewy pearls, and creamy taro root powder.</p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 							<div class="discover_item">
 								<h4>Pomegranate Smoothie</h4>
-								<p>Quench your thirst and tantalize your taste buds with our original Pomegranate
-									smoothies. <span>$0.00</span></p>
+								<p>Quench your thirst and tantalize your taste buds with our original Pomegranate.</p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 							<div class="discover_item">
 								<h4>Hot Fudge Sundaes</h4>
 								<p>Our hot fudge sundae is the ultimate dessert, with velvety vanilla ice cream, gooey
-									fudge sauce, and a fluffy cloud of whipped cream on top <span>$0.00</span></p>
+									fudge sauce, and a fluffy cloud of whipped cream on top.</p>
+								<button><a href="cake.html">View Full Menu</a></button>
 							</div>
 						</div>
 					</div>
@@ -539,7 +544,7 @@
 	<div class="slideshow-container">
 		<div class="mySlides ">
 			<div class="details details-1">
-				<i class="fa-solid fa-ribbon"></i>
+				<img class="logo" src="img/event-logo.png" alt="">
 				<h2>Make Your Birthday Extra Sweet with Our Ice Cream Truck Catering!</h2>
 				<button class="book-btn">Book an Event</button>
 			</div>
@@ -548,7 +553,7 @@
 
 		<div class="mySlides ">
 			<div class="details details-2">
-				<i class="fa-solid fa-ribbon"></i>
+				<img class="logo" src="img/event-logo.png" alt="">
 				<h2>Make Your Summer Picnic Memorable with Our Ice Cream Truck Catering!</h2>
 				<button class="book-btn">Book an Event</button>
 			</div>
@@ -558,7 +563,7 @@
 
 		<div class="mySlides ">
 			<div class="details details-3">
-				<i class="fa-solid fa-ribbon"></i>
+				<img class="logo" src="img/event-logo.png" alt="">
 				<h2>Book us for your next fair and treat your guests to a sweet and memorable experience.</h2>
 				<button class="book-btn">Book an Event</button>
 			</div>
