--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
 							data-transform_idle="o:1;"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]"
 							style="color: #fff; text-shadow: 2px 2px 4px #00000080">
-							A realm of coffee enchantment, where every cup is a journey through the rich and aromatic
-							world of flavors. Come, immerse yourself in the magic of our coffee creations!
+							Unforgettable taste and exceptional service - Indulge in the quality of our products!
 						</div>
 
 						<div class="tp-caption tp-resizeme slider_button" data-x="['left','left','left','15','15']"
@@ -256,7 +255,7 @@
 							data-lineheight="['46','46','46','46']" data-width="none" data-height="none"
 							data-whitespace="nowrap" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							<a class="main_btn" href="#">BOOK YOU NEIGHBOURHOOD VISIT</a>
+							<a class="main_btn" href="#">BOOK YOUR NEIGHBOURHOOD VISIT</a>
 						</div>
 					</div>
 				</li>
@@ -538,36 +537,66 @@
 		</div>
 	</section>
 	<!--================End Discover Menu Area =================-->
-
-
 	<!--================Event Slider Area ================== -->
+
+
+	<!-- <h2>Make Your Birthday Extra Sweet with Our Ice Cream Truck Catering!</h2> -->
+	<!-- <h2>Make Your Summer Picnic Memorable with Our Ice Cream Truck Catering!</h2> -->
+	<!-- <h2>Book us for your next fair and treat your guests to a sweet and memorable experience.</h2> -->
+
+
 	<div class="slideshow-container">
 		<div class="mySlides ">
 			<div class="details details-1">
-				<img class="logo" src="img/event-logo.png" alt="">
+				<div class="logo">
+					<img src="img/event-logo.png" alt="">
+				</div>
 				<h2>Make Your Birthday Extra Sweet with Our Ice Cream Truck Catering!</h2>
 				<button class="book-btn">Book an Event</button>
 			</div>
-			<img src="img/newImages/eventslider1.jpeg">
+			<div position: relative; display: inline-block;>
+				<img class="slideImg" src="img/newImages/eventslider1.jpeg"
+					style="background-size: cover; background-position: bottom;">
+				<div
+					style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3);">
+				</div>
+			</div>
 		</div>
 
 		<div class="mySlides ">
 			<div class="details details-2">
-				<img class="logo" src="img/event-logo.png" alt="">
+				<div class="logo">
+					<img src="img/event-logo.png" alt="">
+				</div>
 				<h2>Make Your Summer Picnic Memorable with Our Ice Cream Truck Catering!</h2>
 				<button class="book-btn">Book an Event</button>
 			</div>
-			<img src="img/newImages/eventslider1.jpeg">
-
+			<div position: relative; display: inline-block;>
+				<img class="slideImg" src="img/newImages/eventslider1.jpeg"
+					style="background-size: cover; background-position: bottom;">
+				<div
+					style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3);">
+				</div>
+			</div>
 		</div>
 
 		<div class="mySlides ">
 			<div class="details details-3">
-				<img class="logo" src="img/event-logo.png" alt="">
+				<div class="logo">
+					<img src="img/event-logo.png" alt="">
+				</div>
 				<h2>Book us for your next fair and treat your guests to a sweet and memorable experience.</h2>
+
 				<button class="book-btn">Book an Event</button>
 			</div>
-			<img src="img/newImages/eventslider1.jpeg">
+			<div position: relative; display: inline-block;>
+				<img class="slideImg" src="img/newImages/eventslider1.jpeg"
+					style="background-size: cover; background-position: bottom;">
+				<div
+					style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3);">
+				</div>
+			</div>
+
 		</div>
 	</div>
 	<!--================End Event Slider Area ================== -->
