--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<!-- MAIN IMAGE -->
 					<div position: relative; display: inline-block;>
 						<img src="img/newImages/truck1.png" alt=""
-							style="width: 100%; height: 100%; background-size: cover; background-position: bottom;"
+							style="width: 100%; height: 100%; background-size: contain; background-position: bottom;"
 							data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
 						<div
 							style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7);">
@@ -354,7 +354,7 @@
 						<div class="cake_feature_item">
 							<div class="cake_img">
 								<img src="img/product-sections/ice.jpg"
-									style="object-fit: cover; object-position: center;" height="300px" alt=""
+									style="object-fit: cover; object-position: top;" height="300px" alt=""
 									width="300px">
 							</div>
 							<div class="cake_text">
@@ -374,52 +374,51 @@
 							</div>
 						</div>
 					</div>
-
 					<div class="item">
 						<div class="cake_feature_item">
 							<div class="cake_img">
-								<img src="img/product-sections/milk.jpg"
-									style="object-fit: cover; object-position: bottom;" height="300px" alt=""
-									width="300px">
-							</div>
-							<div class="cake_text">
-								<h3>Milk Shakes</h3>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="cake_feature_item">
-							<div class="cake_img">
-								<img src="img/product-sections/smoothie-1.jpg"
-									style="object-fit: cover; object-position: center;" height="300px" alt=""
-									width="300px">
-							</div>
-							<div class="cake_text">
-								<h3>Smoothie</h3>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="cake_feature_item">
-							<div class="cake_img">
-								<img src="img/product-sections/coffee.jpg"
-									style="object-fit: cover; object-position: bottom;" height="350px" alt=""
-									width="300px">
-							</div>
-							<div class="cake_text">
-								<h3>Coffee</h3>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="cake_feature_item">
-							<div class="cake_img">
-								<img src="img/product-sections/cup-cake.jpg"
+								<img src="img/product-sections/smoothi.jpg"
 									style="object-fit: cover; object-position: top;" height="300px" alt=""
 									width="300px">
 							</div>
 							<div class="cake_text">
-								<h3>Cup Cake</h3>
+								<h3>Smoothies</h3>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="cake_feature_item">
+							<div class="cake_img">
+								<img src="img/product-sections/milkfloat.jpg"
+									style="object-fit: cover; object-position: right;" height="300px" alt=""
+									width="auto">
+							</div>
+							<div class="cake_text">
+								<h3>Milk Shakes & Floats</h3>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="cake_feature_item">
+							<div class="cake_img">
+								<img src="img/product-sections/sundae.jpg"
+									style="object-fit: cover; object-position: center;" height="300px" alt=""
+									width="300px">
+							</div>
+							<div class="cake_text">
+								<h3>Sundaes With Ice cream</h3>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="cake_feature_item">
+							<div class="cake_img">
+								<img src="img/product-sections/iceball.jpg"
+									style="object-fit: cover; object-position: left;" height="300px" alt=""
+									width="300px">
+							</div>
+							<div class="cake_text">
+								<h3>Ice Ball & Shaved Ice</h3>
 							</div>
 						</div>
 					</div>
