add some components and improve responsive

--- a/cake.html
+++ b/cake.html
@@ -97,8 +97,8 @@
 									</ul>
 							</li> -->
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="cake.html">Products</a></li>
-							<li><a href="service.html">Services</a></li>
+							<li class="active"><a href="cake.html">Menu</a></li>
+							<li><a href="service.html">Gallery</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -147,6 +147,8 @@
 										</ul>
 									</li> -->
 							<li><a href="contact.html">Contact Us</a></li>
+							<li><a id="bookEventPageNavLink" href="book-event.html">Book An Event</a></li>
+
 						</ul>
 					</div>
 				</nav>
@@ -194,7 +196,8 @@
 						<img src="" alt="">
 					</div>
 					<h3>Brown Sugar</h3>
-					<p>Our brown sugar bubble tea is a deliciously sweet and creamy beverage that combines bold tea with smooth milk brown sugar.</p>
+					<p>Our brown sugar bubble tea is a deliciously sweet and creamy beverage that combines bold tea with
+						smooth milk brown sugar.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<div class="image">
@@ -257,10 +260,10 @@
 						<img src="" alt="">
 					</div>
 					<h3>Piña Colada</h3>
-					<p>Craving a deliciously unique drink? Look no further than Oreo bubble tea! Sip on the creamy blend of milk, pearls, and crushed Oreos.</p>
+					<p>Craving a deliciously unique drink? Look no further than Oreo bubble tea! Sip on the creamy blend
+						of milk, pearls, and crushed Oreos.</p>
 				</div>
 			</div>
-
 
 			<!-- Fruit Smoothies -->
 			<h2 class="product-title">Fruit Smoothies</h2>
@@ -270,49 +273,94 @@
 						<img src="" alt="">
 					</div>
 					<h3>Sweet and Sour</h3>
-					<p>Treat your taste buds to a sweet and tangy explosion with our fruit smoothies, blending the best of both worlds for a refreshing delight.</p>
+					<p>Treat your taste buds to a sweet and tangy explosion with our fruit smoothies, blending the best
+						of both worlds for a refreshing delight.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<div class="image">
 						<img src="" alt="">
 					</div>
 					<h3>Strawberry</h3>
-					<p>Get a taste of summer with our luscious strawberry smoothies - bursting with juicy, ripe fruit and blended to perfection for a refreshing treat.</p>
+					<p>Get a taste of summer with our luscious strawberry smoothies - bursting with juicy, ripe fruit
+						and blended to perfection for a refreshing treat.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<div class="image">
 						<img src="" alt="">
 					</div>
 					<h3>Piña Colada</h3>
-					<p>Escape to paradise with our luscious Pina Colada smoothies, blending sweet pineapple, creamy coconut, and ice for a cool, tropical treat.</p>
+					<p>Escape to paradise with our luscious Pina Colada smoothies, blending sweet pineapple, creamy
+						coconut, and ice for a cool, tropical treat.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<div class="image">
 						<img src="" alt="">
 					</div>
 					<h3>Mango</h3>
-					<p>Savor the taste of the tropics with our original Mango smoothies - a delightful blend of fresh, ripe fruit and creamy goodness, perfect for any occasion.</p>
+					<p>Savor the taste of the tropics with our original Mango smoothies - a delightful blend of fresh,
+						ripe fruit and creamy goodness, perfect for any occasion.</p>
 				</div>
-				
+
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<div class="image">
+						<img src="" alt="">
+					</div>
 					<h3>Pomegranate</h3>
-					<p>Quench your thirst and tantalize your taste buds with our original Pomegranate smoothies - a refreshing and delicious blend of tangy fruit and creamy goodness.</p>
+					<p>Quench your thirst and tantalize your taste buds with our original Pomegranate smoothies - a
+						refreshing and delicious blend of tangy fruit and creamy goodness.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<div class="image">
+						<img src="" alt="">
+					</div>
+					<h3>Peach</h3>
+					<p>Delight in the refreshing taste of our fresh Peach smoothies - a delectable blend of ripe fruit
+						and creamy indulgence that will leave you feeling satisfied.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<div class="image">
+						<img src="" alt="">
+					</div>
+					<h3>Pineapple</h3>
+					<p>Immerse yourself in a world of flavor with our juicy Pineapple smoothies - a delicious
+						combination of sweet, ripe fruit and creamy indulgence that's sure to please.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<div class="image">
+						<img src="" alt="">
+					</div>
+					<h3>Lemonade</h3>
+					<p>Sip on sunshine with our Lemonade smoothies - a delightful mix of tangy lemon and smooth, creamy
+						goodness.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<div class="image">
+						<img src="" alt="">
+					</div>
+					<h3>Strawberry Banana</h3>
+					<p>A tantalizingly tangy fusion of succulent strawberries and creamy bananas, bursting with natural
+						goodness.</p>
+				</div>
+			</div>
+
+			<!-- Fruit Smoothies -->
+			<h2 class="product-title">Milk Smoothies with Boba</h2>
+			<div class="cake_feature_row row">
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<h3>Sea Salt Caramel Coffee</h3>
+					<p>Satisfy your sweet and salty cravings with our Sea Salt Caramel Coffee milk smoothie with boba pearls. A perfect pick-me-up for any time of the day.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<h3>Taro</h3>
+					<p>Introducing our irresistible Taro Milk Smoothie with Boba, a deliciously unique blend of creamy taro and sweet boba pearls.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<h3>Peach</h3>
-					<p>Delight in the refreshing taste of our fresh Peach smoothies - a delectable blend of ripe fruit and creamy indulgence that will leave you feeling satisfied.</p>
+					<p>Peachy goodness in every sip! Try our Peach Milk Smoothie with boba for a refreshing and natural treat. Perfect for a sunny day.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<h3>Pineapple</h3>
-					<p>Immerse yourself in a world of flavor with our juicy Pineapple smoothies - a delicious combination of sweet, ripe fruit and creamy indulgence that's sure to please.</p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<h3>Lemonade</h3>
-					<p>Sip on sunshine with our Lemonade smoothies - a delightful mix of tangy lemon and smooth, creamy goodness.</p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<h3>Strawberry Banana</h3>
-					<p>A tantalizingly tangy fusion of succulent strawberries and creamy bananas, bursting with natural goodness.</p>
+					<h3>Green Tea</h3>
+					<p>Indulge in the refreshing fusion of green tea and boba with our milk smoothies. A treat for your taste buds.</p>
 				</div>
 			</div>
 
