--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 								</ul> -->
 							</li>
 							<li><a href="cake.html">Menu</a></li>
-							<li><a href="service.html">Services</a></li>
+							<li><a href="service.html">Gallery</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -149,7 +149,8 @@
 										<li><a href="checkout.html">Checkout Page</a></li>
 									</ul>
 								</li> -->
-							<li><a href="contact.html">Contact Us</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
+								<li><a id="bookEventPageNavLink" href="book-event.html">Book An Event</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -205,7 +206,7 @@
 							data-lineheight="['46','46','46','46']" data-width="none" data-height="none"
 							data-whitespace="nowrap" data-type="text" data-responsive_offset="on"
 							data-frames="[{&quot;delay&quot;:10,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;&quot;,&quot;mask&quot;:&quot;x:0px;y:[100%];s:inherit;e:inherit;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:1500,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;y:[175%];&quot;,&quot;mask&quot;:&quot;x:inherit;y:inherit;s:inherit;e:inherit;&quot;,&quot;ease&quot;:&quot;Power2.easeInOut&quot;}]">
-							<a style="margin-top: 40px;" class="main_btn" href="cake.html">BOOK AN EVENT</a>
+							<a style="margin-top: 40px;" class="main_btn" href="book-event.html">BOOK AN EVENT</a>
 						</div>
 					</div>
 				</li>
@@ -344,7 +345,7 @@
 				</div>
 			</div>
 
-
+			<!-- feature items -->
 			<div class="cake_feature_inner">
 				<div class="main_title">
 					<h2>Our Featured Products</h2>
@@ -353,9 +354,8 @@
 					<div class="item">
 						<div class="cake_feature_item">
 							<div class="cake_img">
-								<img src="img/product-sections/ice.jpg"
-									style="object-fit: cover; object-position: top;" height="300px" alt=""
-									width="300px">
+								<img src="img/product-sections/ice.jpg" style="object-fit: cover; object-position: top;"
+									height="300px" alt="" width="300px">
 							</div>
 							<div class="cake_text">
 								<h3>Ice cream</h3>
@@ -482,25 +482,26 @@
 								<p>Satisfy your sweet and salty cravings with our Sea Salt Caramel Coffee milk smoothie
 									with boba pearls. A perfect pick-me-up for any time of the day.
 								</p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
+
 							</div>
 							<div class="discover_item">
 								<h4>Brown Sugar Bubble Tea</h4>
 								<p>Our brown sugar bubble tea is a deliciously sweet and creamy beverage that combines
 									bold tea with smooth milk brown sugar. </p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 							<div class="discover_item">
 								<h4>Oreo Milkshakes</h4>
 								<p>Crushed Oreos, creamy vanilla ice cream, and a touch of magic come together to create
 									the ultimate Oreo milkshake experience. </p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 							<div class="discover_item">
 								<h4>Tropical Snow Balls</h4>
 								<p>Our tropical shave ice blends exotic flavors and juicy fruits for a refreshing treat.
 									Cool off in style! </p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 						</div>
 					</div>
@@ -510,24 +511,24 @@
 								<h4>Cheese Cake Ice cream</h4>
 								<p>Enjoy the taste of summer with our delicious Cheese Cake Ice cream cone.
 								</p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 							<div class="discover_item">
 								<h4>Taro Bubble Tea</h4>
 								<p>Taro boba tea, a sweet, earthy, and revitalizing Taiwanese favourite, is made with
 									milk, chewy pearls, and creamy taro root powder.</p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 							<div class="discover_item">
 								<h4>Pomegranate Smoothie</h4>
 								<p>Quench your thirst and tantalize your taste buds with our original Pomegranate.</p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 							<div class="discover_item">
 								<h4>Hot Fudge Sundaes</h4>
 								<p>Our hot fudge sundae is the ultimate dessert, with velvety vanilla ice cream, gooey
 									fudge sauce, and a fluffy cloud of whipped cream on top.</p>
-								<button><a href="cake.html">View Full Menu</a></button>
+								<a class="pest_w_btn menu-pest_w_btn" href="#">View Full Menu</a>
 							</div>
 						</div>
 					</div>
