--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,8 @@
 									</ul>
 							</li> -->
 							<li><a href="index.html">Home</a></li>
-							<li><a href="cake.html">Products</a></li>
-							<li><a href="service.html">Services</a></li>
+							<li><a href="cake.html">Menu</a></li>
+							<li><a href="service.html">Gallery</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -148,6 +148,8 @@
 										</ul>
 									</li> -->
 							<li class="active"><a href="contact.html">Contact Us</a></li>
+							<li><a id="bookEventPageNavLink" href="book-event.html">Book An Event</a></li>
+
 						</ul>
 					</div>
 				</nav>
