--- a/service.html
+++ b/service.html
@@ -97,8 +97,8 @@
 									</ul>
 							</li> -->
 							<li><a href="index.html">Home</a></li>
-							<li><a href="cake.html">Products</a></li>
-							<li class="active"><a href="service.html">Services</a></li>
+							<li><a href="cake.html">Menu</a></li>
+							<li class="active"><a href="service.html">Gallery</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -147,6 +147,8 @@
 										</ul>
 									</li> -->
 							<li><a href="contact.html">Contact Us</a></li>
+							<li><a id="bookEventPageNavLink" href="book-event.html">Book An Event</a></li>
+
 						</ul>
 					</div>
 				</nav>
@@ -159,10 +161,10 @@
 	<section class="banner_area">
 		<div class="container">
 			<div class="banner_text">
-				<h3>Services</h3>
+				<h3>Gallery</h3>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="service.html">Services</a></li>
+					<li><a href="service.html">Gallery</a></li>
 				</ul>
 			</div>
 		</div>
@@ -170,6 +172,46 @@
 	<!--================End Main Header Area =================-->
 
 	<!--================Service Offer Area =================-->
+	<div class="event-type-section">
+		<h2>Types of Events We Offer.</h2>
+		<h4>Choose your event.</h4>
+		<div class="events-type">
+
+			<!-- event 1 -->
+			<div class="event-1 event">
+				<img src="" alt="">
+				<h3>Corporate / Social Events</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
+					repellat quaerat deserunt, ad quae molestiae</p>
+			</div>
+
+			<!-- event 2 -->
+			<div class="event-2 event">
+				<img src="" alt="">
+				<h3>Schools / Day Cares / Summer Camps</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
+					repellat quaerat deserunt, ad quae molestiae</p>
+			</div>
+
+			<!-- event 3 -->
+			<div class="event-3 event">
+				<img src="" alt="">
+				<h3>Birthday Parties / Weddings </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
+					repellat quaerat deserunt, ad quae molestiae</p>
+			</div>
+
+			<!-- event 4 -->
+			<div class="event-4 event">
+				<img src="" alt="">
+				<h3>Pool Parties / Festivals </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
+					repellat quaerat deserunt, ad quae molestiae</p>
+			</div>
+		</div>
+	</div>
+
+
 	<section class="service_offer_area p_100">
 		<div class="container">
 			<div class="main_title">
@@ -208,7 +250,7 @@
 					<div class="service_m_item">
 						<div class="service_img_inner">
 							<div class="service_img">
-								<img class="rounded-circle" src="img/product3.jpg" alt="" width="220px" height="220px">
+								<img class="rounded-circle" src="img/product4.jpg" alt="" width="220px" height="220px">
 							</div>
 						</div>
 						<div class="service_text">
@@ -252,7 +294,7 @@
 	<!--================End Service Offer Area =================-->
 
 	<!--================Discover Menu Area =================-->
-	<section class="discover_menu_area service_menu">
+	<!-- <section class="discover_menu_area service_menu">
 		<div class="discover_menu_inner">
 			<div class="container">
 				<div class="s_dis_title">
@@ -310,7 +352,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!--================End Discover Menu Area =================-->
 
 	<!--================Bakery Video Area =================-->
