--- a/cake.html
+++ b/cake.html
@@ -98,7 +98,7 @@
 							</li> -->
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="cake.html">Menu</a></li>
-							<li><a href="service.html">Gallery</a></li>
+							<li><a href="service.html">Services</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -164,7 +164,7 @@
 				<h3>Lavish Ice Cream Menu</h3>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="cakes.html">Products</a></li>
+					<li><a href="cakes.html">Menu</a></li>
 				</ul>
 			</div>
 		</div>
@@ -172,16 +172,123 @@
 	<!--================End Main Header Area =================-->
 
 	<!--================Blog Main Area =================-->
+
+	<section class="service_offer_area" style="margin-top: 100px;">
+		<div class="container">
+			<div class="main_title">
+				<h2>What We Offer</h2>
+			</div>
+			<div class="row service_main_item_inner">
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/cones.jpeg"
+									style="object-fit: cover; object-position: center;" alt="" width="220px"
+									height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Waffle Cones</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/tea.jpeg"
+									style="object-fit: cover; object-position: center;" alt="" width="220px"
+									height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Bubble Tea</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/smoothie.jpeg"
+									style="object-fit: cover; object-position: center;" alt="" width="220px"
+									height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Smoothies</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/float.jpeg"
+									style="object-fit: cover; object-position: center;" alt="" width="220px"
+									height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Milk Shakes And Floats</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/sundae.jpeg"
+									style="object-fit: cover; object-position: center;" alt="" width="220px"
+									height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Sundaes</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/iceball.jpg"
+									style="object-fit: cover; object-position: center;" alt="" width="220px"
+									height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Iceballs and Shaved Ice</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="our_cakes_area p_100">
 		<div class="container">
-
+			<h1 style="text-align: center; margin-bottom: 50px; font-weight: bold; color:#3e606b; font-family: Playfair Display">Full Menu</h1>
 			<!-- ice creamn -->
 			<h2 class="product-title">Ice Cream</h2>
 			<div class="cake_feature_row row">
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<div class="image">
+					<!-- <div class="image">
 						<img src="" alt="">
-					</div>
+					</div> -->
 					<h3>Build Your Own Waffle Cone</h3>
 					<p>Select your preferred ice cream flavor, cone type, and presentation style to create an
 						irresistible treat.</p>
@@ -192,25 +299,25 @@
 			<h2 class="product-title">Bubble Tea</h2>
 			<div class="cake_feature_row row">
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<div class="image">
+					<!-- <div class="image">
 						<img src="" alt="">
-					</div>
+					</div> -->
 					<h3>Brown Sugar</h3>
 					<p>Our brown sugar bubble tea is a deliciously sweet and creamy beverage that combines bold tea with
 						smooth milk brown sugar.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<div class="image">
+					<!-- <div class="image">
 						<img src="" alt="">
-					</div>
+					</div> -->
 					<h3>Thai</h3>
 					<p>Transport yourself to the vibrant streets of Thailand with our deliciously refreshing Thai bubble
 						tea!.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
-					<div class="image">
+					<!-- <div class="image">
 						<img src="" alt="">
-					</div>
+					</div> -->
 					<h3>Taro</h3>
 					<p>Taro boba tea, a sweet, earthy, and revitalizing Taiwanese favourite, is made with milk, chewy
 						pearls, and creamy taro root powder.</p>
@@ -348,19 +455,32 @@
 			<div class="cake_feature_row row">
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<h3>Sea Salt Caramel Coffee</h3>
-					<p>Satisfy your sweet and salty cravings with our Sea Salt Caramel Coffee milk smoothie with boba pearls. A perfect pick-me-up for any time of the day.</p>
+					<p>Satisfy your sweet and salty cravings with our Sea Salt Caramel Coffee milk smoothie with boba
+						pearls. A perfect pick-me-up for any time of the day.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<h3>Taro</h3>
-					<p>Introducing our irresistible Taro Milk Smoothie with Boba, a deliciously unique blend of creamy taro and sweet boba pearls.</p>
+					<p>Introducing our irresistible Taro Milk Smoothie with Boba, a deliciously unique blend of creamy
+						taro and sweet boba pearls.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<h3>Peach</h3>
-					<p>Peachy goodness in every sip! Try our Peach Milk Smoothie with boba for a refreshing and natural treat. Perfect for a sunny day.</p>
+					<p>Peachy goodness in every sip! Try our Peach Milk Smoothie with boba for a refreshing and natural
+						treat. Perfect for a sunny day.</p>
 				</div>
 				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
 					<h3>Green Tea</h3>
-					<p>Indulge in the refreshing fusion of green tea and boba with our milk smoothies. A treat for your taste buds.</p>
+					<p>Indulge in the refreshing fusion of green tea and boba with our milk smoothies. A treat for your
+						taste buds.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<h3>Sweet and Sour</h3>
+					<p>Dive into a tantalizing blend of flavors with our sweet and sour milk smoothies, featuring perfectly cooked boba for a delightful chewy surprise.</p>
+				</div>
+				<div class="col-lg-4 col-md-4 col-6 product-dets-box">
+					<h3>Green Tea</h3>
+					<p>Indulge in the refreshing fusion of green tea and boba with our milk smoothies. A treat for your
+						taste buds.</p>
 				</div>
 			</div>
 
