--- a/service.html
+++ b/service.html
@@ -98,7 +98,7 @@
 							</li> -->
 							<li><a href="index.html">Home</a></li>
 							<li><a href="cake.html">Menu</a></li>
-							<li class="active"><a href="service.html">Gallery</a></li>
+							<li class="active"><a href="service.html">Services</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -179,34 +179,33 @@
 
 			<!-- event 1 -->
 			<div class="event-1 event">
-				<img src="" alt="">
+				<img src="img/gallery-img/social.jpg" style="object-fit: cover; object-position: center;" alt="">
 				<h3>Corporate / Social Events</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
-					repellat quaerat deserunt, ad quae molestiae</p>
+				<a href="book-event.html">Book Now</a>
+
 			</div>
 
 			<!-- event 2 -->
 			<div class="event-2 event">
-				<img src="" alt="">
+				<img src="img/gallery-img/school.jpg" style="object-fit: cover; object-position: center;" alt="">
 				<h3>Schools / Day Cares / Summer Camps</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
-					repellat quaerat deserunt, ad quae molestiae</p>
+				<a href="book-event.html">Book Now</a>
+
 			</div>
 
 			<!-- event 3 -->
 			<div class="event-3 event">
-				<img src="" alt="">
+				<img src="img/gallery-img/bd.jpg" style="object-fit: cover; object-position: center;" alt="">
 				<h3>Birthday Parties / Weddings </h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
-					repellat quaerat deserunt, ad quae molestiae</p>
+				<a href="book-event.html">Book Now</a>
+
 			</div>
 
 			<!-- event 4 -->
 			<div class="event-4 event">
-				<img src="" alt="">
+				<img src="img/gallery-img/festival.jpg" style="object-fit: cover; object-position: center;" alt="">
 				<h3>Pool Parties / Festivals </h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi nemo provident labore quas magnam
-					repellat quaerat deserunt, ad quae molestiae</p>
+				<a href="book-event.html">Book Now</a>
 			</div>
 		</div>
 	</div>
@@ -222,12 +221,12 @@
 					<div class="service_m_item">
 						<div class="service_img_inner">
 							<div class="service_img">
-								<img class="rounded-circle" src="img/product1.jpg" alt="" width="220px" height="220px">
+								<img class="rounded-circle" src="img/gallery-img/cones.jpeg" style="object-fit: cover; object-position: center;" alt="" width="220px" height="220px">
 							</div>
 						</div>
 						<div class="service_text">
 							<a href="#">
-								<h4>Valentines Day Ice-Cream</h4>
+								<h4>Waffle Cones</h4>
 							</a>
 						</div>
 					</div>
@@ -236,12 +235,12 @@
 					<div class="service_m_item">
 						<div class="service_img_inner">
 							<div class="service_img">
-								<img class="rounded-circle" src="img/product2.jpg" alt="" width="220px" height="220px">
+								<img class="rounded-circle" src="img/gallery-img/tea.jpeg" style="object-fit: cover; object-position: center;" alt="" width="220px" height="220px">
 							</div>
 						</div>
 						<div class="service_text">
 							<a href="#">
-								<h4>Valentines Day Ice-Cream</h4>
+								<h4>Bubble Tea</h4>
 							</a>
 						</div>
 					</div>
@@ -250,12 +249,12 @@
 					<div class="service_m_item">
 						<div class="service_img_inner">
 							<div class="service_img">
-								<img class="rounded-circle" src="img/product4.jpg" alt="" width="220px" height="220px">
+								<img class="rounded-circle" src="img/gallery-img/smoothie.jpeg" style="object-fit: cover; object-position: center;" alt="" width="220px" height="220px">
 							</div>
 						</div>
 						<div class="service_text">
 							<a href="#">
-								<h4>Valentines Day Ice-Cream</h4>
+								<h4>Smoothies</h4>
 							</a>
 						</div>
 					</div>
@@ -264,12 +263,12 @@
 					<div class="service_m_item">
 						<div class="service_img_inner">
 							<div class="service_img">
-								<img class="rounded-circle" src="img/product4.jpg" alt="" width="220px" height="220px">
+								<img class="rounded-circle" src="img/gallery-img/float.jpeg" style="object-fit: cover; object-position: center;" alt="" width="220px" height="220px">
 							</div>
 						</div>
 						<div class="service_text">
 							<a href="#">
-								<h4>Valentines Day Ice-Cream</h4>
+								<h4>Milk Shakes And Floats</h4>
 							</a>
 						</div>
 					</div>
@@ -278,12 +277,26 @@
 					<div class="service_m_item">
 						<div class="service_img_inner">
 							<div class="service_img">
-								<img class="rounded-circle" src="img/product5.jpg" alt="" width="220px" height="220px">
+								<img class="rounded-circle" src="img/gallery-img/sundae.jpeg" style="object-fit: cover; object-position: center;" alt="" width="220px" height="220px">
 							</div>
 						</div>
 						<div class="service_text">
 							<a href="#">
-								<h4>Valentines Day Ice-Cream</h4>
+								<h4>Sundaes</h4>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 col-sm-6">
+					<div class="service_m_item">
+						<div class="service_img_inner">
+							<div class="service_img">
+								<img class="rounded-circle" src="img/gallery-img/iceball.jpg" style="object-fit: cover; object-position: center;" alt="" width="220px" height="220px">
+							</div>
+						</div>
+						<div class="service_text">
+							<a href="#">
+								<h4>Iceballs and Shaved Ice</h4>
 							</a>
 						</div>
 					</div>
