--- a/book-event.html
+++ b/book-event.html
@@ -103,8 +103,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 2.0rem;
-            padding: 0 5rem;
+            gap: .8rem;
+            padding: 0 2rem;
         }
 
         .form .input-box .input-field {
@@ -120,7 +120,7 @@
         }
 
         .form .input-box .input-field input {
-            padding: 0.4rem 0.2rem;
+            padding: 0.2rem 0.2rem;
             font-size: .8rem;
             border-radius: .2rem;
             outline: none;
