--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
-	<title>Cake - Bakery</title>
+	<title>Lavish Ice Cream</title>
 
 	<!-- Icon css link -->
 	<link href="css/font-awesome.min.css" rel="stylesheet">
@@ -101,7 +101,7 @@
 								</ul> -->
 							</li>
 							<li><a href="cake.html">Menu</a></li>
-							<li><a href="service.html">Gallery</a></li>
+							<li><a href="service.html">Services</a></li>
 							<!-- <li><a href="menu.html">Menu</a></li> -->
 							<!-- <li class="dropdown submenu">
 								<a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -149,8 +149,8 @@
 										<li><a href="checkout.html">Checkout Page</a></li>
 									</ul>
 								</li> -->
-								<li><a href="contact.html">Contact Us</a></li>
-								<li><a id="bookEventPageNavLink" href="book-event.html">Book An Event</a></li>
+							<li><a href="contact.html">Contact Us</a></li>
+							<li><a id="bookEventPageNavLink" href="book-event.html">Book An Event</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -171,7 +171,7 @@
 					<!-- MAIN IMAGE -->
 					<div position: relative; display: inline-block;>
 						<img src="img/newImages/truck1.png" alt=""
-							style="width: 100%; height: 100%; background-size: contain; background-position: bottom;"
+							style="width: 100%; height: 100%; background-size: cover; background-position: bottom;"
 							data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
 						<div
 							style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.7);">
@@ -213,13 +213,13 @@
 
 				<li data-index="rs-1589" data-transition="fade" data-slotamount="default" data-hideafterloop="0"
 					data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="300"
-					data-thumb="img/newImages/truck2.jpg" data-rotate="0" data-saveperformance="off"
+					data-thumb="img/main.jpg" data-rotate="0" data-saveperformance="off"
 					data-title="Creative" data-param1="01" data-param2="" data-param3="" data-param4="" data-param5=""
 					data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 					<!-- MAIN IMAGE -->
 
 					<div position: relative; display: inline-block;>
-						<img src="img/newImages/truck2.jpg"
+						<img src="img/main.jpg"
 							style="width: 100%; height: 100%; background-size: cover; background-position: bottom;"
 							alt="" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
 						<div
